src/bootstrap/test/v0_13/rejects/03_interpolation_wrong_type_macos/main.zg
# requires: v0.13
s := "hi"
asm {
	mov x1, ${s}
	svc #0x80
}
